Homework complete with Bode's assistance

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 </head>
 <body>
    <center><h2><b>Park Car</b></h2></center>
-   <div id="checkSpaceDiv" class="divpadding">
-       <button id="checkSpaceBtn">Check for Open Space</button>
-   </div> 
-   <hr></hr>
    <div id="inputDiv">
         <input type="text" placeholder="Car Name" id="carNameIn">
         <button id="submitBtn">Submit Car Name</button>
@@ -23,6 +19,13 @@
         <ul id="displayDiv">
             
         </ul>
+    </div>
+    <br/>
+    <div id="checkCar">
+        <input type="text" placeholder="Add your Car Name Here" id="carCheckIn">
+        <button id="checkCarBtn">Check for Car</button>
+            <div id="carListDiv">
+            </div>
     </div>
 </body>
 </html>
